--- a/style.css
+++ b/style.css
@@ -103,6 +103,11 @@ body {
     color: #aaa;
 }
 
+.underlineT{
+    width: 150px;
+    height: 10px;
+    background-color: red;
+}
 
 .card {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
