--- a/style.css
+++ b/style.css
@@ -45,6 +45,39 @@
     }
 }
 
+.fadeLeft{
+        animation: fadeLeft both;
+    animation-timeline: view();
+    animation-range: entry 20% cover 100vh;
+}
+@keyframes fadeLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.fadeRight{
+        animation: fadeRight both;
+    animation-timeline: view();
+    animation-range: entry 20% cover 100vh;
+}
+@keyframes fadeRight {
+    from {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+
 
 
 /* Unused typewriter styles - commented out since not being used
